# pyadbauto

./: .gitignore  README.md  dev-requirements.txt  pogo.ipynb  pyproject.toml  requirements.txt
pogo/: README.md  pogo.ipynb  pogo_old.ipynb
pyadbauto/: __init__.py  __main__.py  adb_commands.py  cli_utils.py  client.py  image.py
pyadbauto/ide/: canvas.py  main.py  test.py
tests/: test_pyadbauto.py
